Correctly merge two layers

We need to merge both layers using the right properties on a third
paint device and then use that for the combined layer.

BUG:294493